{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 155,
  "lineage": "31fadf5a-bd70-92d9-5007-024098f2b927",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "ip-data-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/publicIPAddresses/ip-sndbx-mm-centralindia",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.244.127.52",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "ip-sndbx-mm-centralindia",
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "sku": "Basic",
            "tags": {
              "cleanup": "unknown",
              "environment": "hpsdev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/networkInterfaces/nic-sndbx-mm-centralindia",
            "internal_domain_name_suffix": "vscdeggagq4ulamir3focvfvmb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/publicIPAddresses/ip-sndbx-mm-centralindia",
                "subnet_id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/virtualNetworks/vn-sndbx-mm-centralindia/subnets/subnet-sndbx-mm-centralindia"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-C5-F0-50",
            "name": "nic-sndbx-mm-centralindia",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "tags": {
              "enviornment": "hpsdev"
            },
            "virtual_machine_id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Compute/virtualMachines/vm-sndbx-mm-centralindia"
          },
          "dependencies": [
            "azurerm_public_ip.ip-sndbx-mm-centralindia",
            "azurerm_resource_group.rg-sndbx-mm-centralindia",
            "azurerm_subnet.subnet-sndbx-mm-centralindia",
            "azurerm_virtual_network.vn-sndbx-mm-centralindia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/networkSecurityGroups/nsg-sndbx-mm-centralindia",
            "location": "centralindia",
            "name": "nsg-sndbx-mm-centralindia",
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsr-sndbx-mm-centralindia",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "cleanup": "unknown",
              "enviornment": "hpsdev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-sndbx-mm-centralindia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/networkSecurityGroups/nsg-sndbx-mm-centralindia/securityRules/nsr-sndbx-mm-centralindia",
            "name": "nsr-sndbx-mm-centralindia",
            "network_security_group_name": "nsg-sndbx-mm-centralindia",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-sndbx-mm-centralindia",
            "azurerm_resource_group.rg-sndbx-mm-centralindia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/publicIPAddresses/ip-sndbx-mm-centralindia",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.244.127.52",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "ip-sndbx-mm-centralindia",
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "cleanup": "unknown",
              "environment": "hpsdev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg-sndbx-mm-centralindia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/virtualNetworks/vn-sndbx-mm-centralindia/subnets/subnet-sndbx-mm-centralindia",
            "name": "subnet-sndbx-mm-centralindia",
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "virtual_network_name": "vn-sndbx-mm-centralindia"
          },
          "dependencies": [
            "azurerm_resource_group.rg-sndbx-mm-centralindia",
            "azurerm_virtual_network.vn-sndbx-mm-centralindia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sga-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/virtualNetworks/vn-sndbx-mm-centralindia/subnets/subnet-sndbx-mm-centralindia",
            "network_security_group_id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/networkSecurityGroups/nsg-sndbx-mm-centralindia",
            "subnet_id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/virtualNetworks/vn-sndbx-mm-centralindia/subnets/subnet-sndbx-mm-centralindia"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-sndbx-mm-centralindia",
            "azurerm_resource_group.rg-sndbx-mm-centralindia",
            "azurerm_subnet.subnet-sndbx-mm-centralindia",
            "azurerm_virtual_network.vn-sndbx-mm-centralindia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn-sndbx-mm-centralindia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "183284ac-34c0-453d-8188-8f4ae154b561",
            "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/virtualNetworks/vn-sndbx-mm-centralindia",
            "location": "centralindia",
            "name": "vn-sndbx-mm-centralindia",
            "resource_group_name": "rg-sndbx-mm-centralindia",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/virtualNetworks/vn-sndbx-mm-centralindia/subnets/subnet-sndbx-mm-centralindia",
                "name": "subnet-sndbx-mm-centralindia",
                "security_group": "/subscriptions/7700f392-dcd5-4c02-9432-76a162f3c6d6/resourceGroups/rg-sndbx-mm-centralindia/providers/Microsoft.Network/networkSecurityGroups/nsg-sndbx-mm-centralindia"
              }
            ],
            "tags": {
              "cleanup": "unknown",
              "enviornment": "hpsdev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg-sndbx-mm-centralindia"
          ]
        }
      ]
    }
  ]
}